--- a/Assignment-Five.htm
+++ b/Assignment-Five.htm
@@ -61,12 +61,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <div class="w3-twothird w3-container">
 
       <h1 class="w3-text-red">Project 5</h1>
-        <p>So I thinkj the milling portion of this assignment may have been one of the cooler things we've done in the class so far. As someone who has delt with a hand lathe before, and know how much of a main it can be to carve percise things out of wood, it was really cool to see how well this machine works. Also as someone who has broken bits a couple of times in my life time this was also a little concerning. Luckily due to good instruction we made it through the instruction with out me breaking anything. And having completed the assignment I now have a piece of wood that definitly exists, it even has a hole in it which is different. Really looking at it on my desk from here it isn't just one piece of wood it is two pieces of wood! That even connect kinda which is even more interesting.</p>
+        <p>So I think the milling portion of this assignment may have been one of the cooler things we've done in the class so far. As someone who has delt with a hand lathes, and drills before, and know how much of a pain it can be to carve percise things out of wood, it was really cool to see how well this machine works. Also as someone who has broken bits a couple of times in my life time this was also a little concerning. Luckily due to good instruction we made it through the instruction with out me breaking anything. And having completed the assignment I now have a piece of wood that definitly exists, it even has a hole in it which is different. Really looking at it on my desk from here it isn't just one piece of wood it is two pieces of wood! That even connect kinda which is even more interesting.</p>
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
-        <p>When working on learning these things I would have to say that I think this could be.</p>
+        <p> When </p>
 
 
 
