--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <a class="w3-bar-item w3-button w3-hover-black" href="/Assignment_Two.htm">Project Two</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Three.htm">Project Three</a>
   <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Four.htm">Project Four</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Five.htm">Project Five</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Six.htm">Project Six</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Seven.htm">Project Seven</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Eight.htm">Project Eight</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Nine.htm">Project Nine</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="Assignment_Ten.htm">Project
 </nav>
 
 <!-- Overlay effect when opening sidebar on small screens -->
