--- a/Assignment-Five.htm
+++ b/Assignment-Five.htm
@@ -66,7 +66,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
         <img src="Images/Week5/IMG-1789.png" alt="One arm" style="width:500px;height:500px;">
-        <p> When </p>
+        <p> When it came to being creative I naturally began to have problems. I thought </p>
 
 
 
