--- a/Assignment_Four.htm
+++ b/Assignment_Four.htm
@@ -90,6 +90,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <p>Doing this the proper way was so much better. It was just extruding up to the top of the thing. Creating a circle with an offset plane and then an angled plane. Then creating a circle and extruding it backwards till it connected through. Then we lofted there up to the head. At that time when we go and remove the center of the whole it thing it makes it all hollow and then we need to cut through it with an extrude.</p>
         <h2 class="w3-text-red">Post Script</h2>
         <p>I felt in general this assignment went very smootly which was nice. The time being as short as it was for the print meant that there was plenty of time to actually print the vase. Also both of the designs weren't too crazy, when you go about doing them properly. If I had to choose the most difficult part of this assignment, for me it would have to be making sure that more complicated sketches are completely defined, that for some reason puts me into a tizzy, but I think I'll do better about that going forward. The best part has to be that because of this assignment I now have a little plant in my room, which is always fun.</p>
+        <p>You can click <a href="Images/Week4/STL's.zip" target="_blank">here</a> to download the files I used</p>
 
 
 
