--- a/Assignment_Four.htm
+++ b/Assignment_Four.htm
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-red.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -60,7 +60,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
 
-      <h1 class="w3-text-red">Project 4</h1>
+      <h1 class="w3-text-blue">Project 4</h1>
       <p>When working on this project it started off really easy. I think doing the pot took me maybe 15 minutes to make in Fusion. Then printing it was a really nice smooth process That resulted in a really in a cool little vace that I've got a little plant in. </p>
         <img src="images/Week4/IMG-1809.png" alt="Vase Print" style="width:250px;height:250px;">
         <img src="images/Week4/IMG-1824.png" alt="My cool little plant guy" style="width:250px;height:250px;">
@@ -69,15 +69,15 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week4/PrusaSlicer.png" alt="Prusa Slicer" style="width:250px;height:250px;">
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.48.01%20PM.png" alt="Fusion 360" style="width:250px;height:250px;">
 
-        <h2 class="w3-text-red">The Watering Can</h2>
+        <h2 class="w3-text-blue">The Watering Can</h2>
         <p>Ok so Madison, this where you going to be disappinted in because I needed to make up this watering plant two times. You might wonder why that might be, and that is because I had the misfortune of letting Kevin seeing it before I did this write up. Now what the problem was is that I followed the rubric strictly as it was told to me. Now you as the writer of the rubric might wonder what this issues could possibly be with taking this approach to the project. Well for starters I didn't use the dimenision containt once. That is because I was told to use them less, so to do that I had to do some janky stuff, that made Kevin very upset. There were several errors that it was giving me but at the end of the day I sure did have a watering can. Kevin didn't accept that a reasonable excuse so what I needed to do insead was remake the entire thing.</p>
 
-        <h2 class="w3-text-red">First Extrude</h2>
+        <h2 class="w3-text-blue">First Extrude</h2>
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.50.55%20PM.png" alt="Bottom Sketch" style="width:250px;height:250px;">
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.51.44%20PM.png" alt="First extrude" style="width:250px;height:250px;">
         <p>The beginning. This part was not very hard especially now that I actually used the demension command. Originally it was so much more complicated with like a grid of lines holding things in place that defined this ellipse. However you can see that this is so much easier. And is still defined Yay!</p>
 
-        <h2 class="w3-text-red">Building the Can!</h2>
+        <h2 class="w3-text-blue">Building the Can!</h2>
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.56.01%20PM.png" alt="Watering Can" style="width:250px;height:250px;">
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.56.22%20PM.png" alt="Watering Can" style="width:250px;height:250px;">
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.57.10%20PM.png" alt="Watering Can" style="width:250px;height:250px;">
@@ -88,7 +88,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.58.12%20PM.png" alt="Watering Can" style="width:250px;height:250px;">
         <img src="Images/Week4/Screen%20Shot%202020-10-14%20at%207.58.28%20PM.png" alt="Watering Can" style="width:250px;height:250px;">
         <p>Doing this the proper way was so much better. It was just extruding up to the top of the thing. Creating a circle with an offset plane and then an angled plane. Then creating a circle and extruding it backwards till it connected through. Then we lofted there up to the head. At that time when we go and remove the center of the whole it thing it makes it all hollow and then we need to cut through it with an extrude.</p>
-        <h2 class="w3-text-red">Post Script</h2>
+        <h2 class="w3-text-blue">Post Script</h2>
         <p>I felt in general this assignment went very smootly which was nice. The time being as short as it was for the print meant that there was plenty of time to actually print the vase. Also both of the designs weren't too crazy, when you go about doing them properly. If I had to choose the most difficult part of this assignment, for me it would have to be making sure that more complicated sketches are completely defined, that for some reason puts me into a tizzy, but I think I'll do better about that going forward. The best part has to be that because of this assignment I now have a little plant in my room, which is always fun.</p>
         <p>You can click <a href="Images/Week4/STL's.zip" target="_blank">here</a> to download the files I used</p>
 
