--- a/Assignment_Seven.htm
+++ b/Assignment_Seven.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>Puppies</title>
+<title>Assignment Seven</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -25,7 +25,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
     <a class="w3-bar-item w3-button w3-right w3-hide-large w3-hover-white w3-large w3-theme-l1" href="javascript:void(0)" onclick="w3_open()"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-theme-l1">Home</a>
     <a href="About_Me.htm" class="w3-bar-item w3-button w3-hide-small w3-hover-white">About</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Puppies</a>
+    <a href="Puppies.htm" class="w3-bar-item w3-button w3-hide-small w3-hover-white">Puppies</a>
     <a href="https://www.hrw.org/" class="w3-bar-item w3-button w3-hide-small w3-hover-white">News</a>
     <a href="https://en.wikipedia.org/wiki/Friends" target="_blank" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Friends</a>
     <a href="https://en.wikipedia.org/wiki/Jeff_Bezos" target="_blank" class="w3-bar-item w3-button w3-hide-small w3-hide-medium w3-hover-white">Enemy</a>
@@ -59,51 +59,39 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-blue">Puppies!</h1>
-        <p>Hey this a page with a bunch of photos of tiny dogs. All photos were obtained on</p><a href="https://unsplash.com/s/photos/puppies"> this website</a><p>It is a stock website that you can download all sorts of different images from including puppies. All of the photographers names are also given. For other good sources of dogs I reccommend:</p>
-        <a href="https://twitter.com/dog_feelings"> Thoughts of Dog </a>
-        <div></div>
-        <a href="https://twitter.com/dog_rates"> Dog Rates </a>
-
-    </div>
-
-      <div class="w3-padding w3-twothird w3-container">
-      <img src="Images/Puppy/berkay-gumustekin-ngqyo2AYYnE-unsplash.jpg" alt="puppy" style="width:500px;height:400px;">
-          <p>Image captured by Berkay Gumustekin</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/bharathi-kannan-rfL-thiRzDs-unsplash.jpg" alt="puppy" style="width:502px;height:300px;">
-          <p>Image captured by Kannan Bharathi</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/steve-sewell-tV7JNH73cJg-unsplash.jpg" alt="puppy" style="width:502px;height:300px;">
-          <p>Image captured by Steve Sewell</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/clarke-sanders-nM4gJR-7RWQ-unsplash.jpg" alt="puppy" style="width:502px;height:600px;">
-          <p>Image captured by Clarke Sanders</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/daniel-lincoln-IE2Z11zKsso-unsplash.jpg" alt="puppy" style="width:502px;height:600px;">
-          <p>Image captured by Daniel Lincoln</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/t-r-photography-TzjMd7i5WQI-unsplash.jpg" alt="puppy" style="width:502px;height:600px;">
-          <p>Image captured by T-R photography</p>
-    </div>
-      <div class="w3-padding w3-container">
-      <img src="Images/Puppy/zachary-casler-99Qi-fLC3hs-unsplash.jpg" alt="puppy" style="width:502px;height:300px;">
-          <p>Image captured by Zachary Casler</p>
-    </div>
+      <h1 class="w3-text-blue">Project Seven</h1>
+        <p>This was a fun assignment! I felt the laser cutting was nice, the organizing on illustrator was engaging, the only part of the process I didn't enjoy was working on fusion slicer I found that to be an obnoxious piece of software. At one point it just decided that it was going to be open for ever, and even trying to force quit it did not deter it from living forever. Eventually it gave up it's hold on this mortal plane, and gave in to the abyss. </p>
+        <h2 class="w3-text-blue">First Step</h2>
+        <p>The first thing that I did was go into fusion 360 and I designed an incredibly complex shape with lots of intersting angles.</p>
+        <p>That was a lie the first thing I did was go onto TinkerCad, and I found a shape that I thought was kinda neat. I then recgnized that I couldn't lay it flat in its current form so I flattened off a side so I could lay it on the floor. Then boom I downloaded the .stl file, and got ready to toss it into fusion slicer.</p>
+        <h2 class="w3-text-blue">Awful Software</h2>
+        <p>Here is where my story of my battle with fusion slicer should probably go, however to hold off telling the story till here would've killed me. So I unfortunately need to get right into describing how I made the zip file that I needed.</p>
+        <p>The process of actually just getting the zip was surprisingly pleasant. I just tossed in the .stl. Made the material type known as cardboard. I then told it how many slices I wanted on each axis, and picked a size for the thing that seemed reasonable to me. Once that was done, I could not go look at the instructions or else the program crashes. That took me about 3 times to figure out, and in the end I just guessed that the numbers probably lined up. Since I couldn't look at the instructions step the last thing left for me to do is to </p>
+        <p>You can click <a href="3D-PrintModels.zip" target="_blank">here</a> to download the files I used</p>
 
 
 
+
+
+
+
+
+
+
+
+
+    </div>
+
+
+    <div class="w3-third w3-container">
+
+    </div>
   </div>
 
   <!-- Pagination -->
 
   <footer id="myFooter">
-      <div class="w3-container w3-theme-l2 w3-padding-16">
+    <div class="w3-container w3-theme-l2 w3-padding-16">
       <h4>Contact Me</h4>
         <a href="proctor_john@wheatoncollege.edu" class="w3-bar-item w3-button w3-theme-l1">Email</a>
         <a href="https://www.instagram.com/john.m.proctor/" class="w3-bar-item w3-button w3-theme-l1">Instagram</a>
@@ -111,7 +99,6 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 
     </div>
-
 
     <div class="w3-container  w3-theme-l1">
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
