--- a/Assignment_Two.htm
+++ b/Assignment_Two.htm
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-red.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -59,22 +59,22 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-red">The Beginning</h1>
+      <h1 class="w3-text-blue">Project Two</h1>
       <p>With this project I really started out on the wrong foot. What happened I here you ask? Well turns out to do a laser cutting assignment you need access to a laser cutter. Which us here at Wheaton do have! Yay!</p><img src="Images/Week2/printer.png" alt="Picture of lasercutter" style="width:500px;height:400px;"><p>However I forgot to apply for time until it was all filled up.</p><img src="Images/Week2/Screenshot%20(17).png" alt="Planning Website" style="width:700px;height:500px;"><p> Which makes it a little hard to get anything done.However I was lucky I knew Kevin who was able to let me in a little early today to get some stuff done. When it came to actually using the laser cutter I felt that the process went really well all things told, but there were some issue along the line so you will hear about some mistakes as I go through this.</p>
-        <h1 class="w3-text-red">Swatches</h1>
+        <h1 class="w3-text-blue">Swatches</h1>
         <p>So the first step when working on cutting swatches of different materials is to pick the materials that we're going to cut. I was very perticular in what I picked as my process consisted of was looking around noticing that there was a pile of materials near by, and picking those, as they seemed to have already been cut up a fair bit. Also just so you have some idea where I got my settings from when putting them into the cutter program, there was a board with a bunch of settings in it for that type of wood and I based by guesses on them.</p>
-        <h2 class="w3-text-red">Birch</h2>
+        <h2 class="w3-text-blue">Birch</h2>
         <img src="Images/Week2/IMG-1758.png" alt="Picture of Birch" style="width:700px;height:500px;">
         <p></p>
         <img src="Images/Week2/IMG-1760.png" alt="Picture of Birch swatch" style="width:500px;height:500px;">
         <p>The first thing that I decided to cut was a piece of birch wood that on retrospect feels like I perhaps shouldn't have cut as there was a very pretty tree on it. However in my defense Kevin said it's okay so really it's all his fault. You'll also notice that I don't have a frequency setting for this swatch that is because I forgot that, that was a setting, and then when I remembered I felt that it wasn't important. Don't worry I had a change of heart later and changed it having frequency on it, but the swatches are a bit bigger. Also here is a picture of the birch in the laser cutter.</p>
         <img src="Images/Week2/IMG-1759.png" alt="Birch in laser cutter" style="width:500px;height:500px;">
-        <h2 class="w3-text-red">Cardboard</h2>
+        <h2 class="w3-text-blue">Cardboard</h2>
         <img src="Images/Week2/IMG-1762.png" alt="Picture of cardboard in laser cutter" style="width:700px;height:500px;">
         <p></p>
         <img src="Images/Week2/IMG-1772.png" alt="Picture of Cardboard" style="width:500px;height:500px;">
         <p>Cardboard also went very smoothly for me. Although still at this point we can notice that frequency is not apart of this swatch. This will be the last on of these swatches that I didn't have a problems with so the rest should be more interesting reading.</p>
-        <h2 class="w3-text-red">The Beginning of the Problems: Particle Board</h2>
+        <h2 class="w3-text-blue">The Beginning of the Problems: Particle Board</h2>
         <p> "Woah John what do you mean problems first photo and you've got it! You've even put frequency finally this is clearly an improvement!" Wow, that is so kind of you to say but no in this photo I did not have the power on the vector settings high enough which resulted in it being stuck in the board. Which isn't great. While just flip that board around raise the vector settings and cut a new one! Ok lets see how that went.</p>
         <img src="Images/Week2/IMG-1763.png" alt="stuck particle board" style="width:500px;height:500px;">
         <p>So now we have a slightly different issue. So what I wanted to do to conserve particle board is flip it and cut in the same spot I had started before. Which did result in cutting through kind of. As I'm sure you've noticed the board isn't entirely cut cleanly. So this cut went about halfway through met the other half of the cut and broke of in a new and interesting way that I'm sure you, as the grader would not have appreicated as the final form. So now we go back go to a different place and lower the speed to cut the particle board again and boom.</p>
@@ -83,7 +83,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <img src="Images/Week2/IMG-1765.png" alt="messed up particle board" style="width:500px;height:500px;">
         <p>Victory</p>
         <img src="Images/Week2/IMG-1766.png" alt="correct particle board" style="width:500px;height:500px;">
-        <h2 class="w3-text-red">Particle Board Strikes Back: Thick Black Acrylic</h2>
+        <h2 class="w3-text-blue">Particle Board Strikes Back: Thick Black Acrylic</h2>
         <p>The upside of this swatch is the mistake I made was only a little annoying, but I got some shots of the laser going in the machine. I would've taken a video but that seems kind of scary, so I will put two photos and you can create the scene in your minds eye.</p>
         <img src="Images/Week2/IMG-1767.png" alt="Action Shot of laser" style="width:500px;height:500px;">
         <p></p>
@@ -94,21 +94,21 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
         <p>right</p>
         <img src="Images/Week2/IMG-1774.png" alt="Right Big acrylic" style="width:500px;height:500px;">
         <p>This wasn't a Earth shattering mistake I just figured the settings for the particle board would also work nicely for the acrylic and felt I wouldn't need to change them so didn't think to change what was written on the swatch. As it didn't occur to me that the name of the material was on it. Not the end of the world</p>
-        <h2 class="w3-text-red">The Last Swatch: Thin Red Acrylic</h2>
+        <h2 class="w3-text-blue">The Last Swatch: Thin Red Acrylic</h2>
         <p> This one also really went pretty well I just had one kinda cool thing happen. That being that for the settings that I picked out the vector strenghth was strong enough to cut through the acrylic but not the paper on the back of the acrylic.</p>
         <img src="Images/Week2/IMG-1769.png" alt="paper left on cut of acrylic" style="width:500px;height:500px;">
         <p></p>
         <img src="Images/Week2/IMG-1770.png" alt="acrylic swatch" style="width:500px;height:500px;">
         <p>You also may have noticed that the paper is still on the is because I couldn't get it off with my nails so I just assumed it was a feature not a bug and rolled with it. Until I got back to my room and managed to get it off.</p>
         <img src="Images/Week2/IMG-1775.png" alt=" clear acrylic swatch" style="width:500px;height:500px;">
-        <h3 class="w3-text-red">All of the Swatchs!</h3>
+        <h3 class="w3-text-blue">All of the Swatchs!</h3>
         <img src="Images/Week2/IMG-1771.png" alt=" clear acrylic swatch" style="width:500px;height:500px;">
-        <h1 class="w3-text-red">The Box</h1>
+        <h1 class="w3-text-blue">The Box</h1>
         <p> As of right now I do not have a box although one will be added herer sooner rather then later. However I do have the schematics of the box! So i'm going to show you that. And I'll show you where the box would go if I had one.</p>
         <img src="Images/Week2/Box.png" alt=" box template" style="width:700px;height:500px;">
         <p> This template is the flex box 1 template from the website linked to us and hopefully when I'm have it all cut and glued together it will look something like this</p>
         <img src="Images/Week2/FlexBox.png" alt=" bendy box" style="width:500px;height:500px;">
-        <h2 class="w3-text-red"> Woah Attempt Two!</h2>
+        <h2 class="w3-text-blue"> Woah Attempt Two!</h2>
         <p> Hey! I finally finished the assignment I now have a box which is pretty great! Well really I have a box and like a cup... yeah I guess cup would be the right word. Well I should explain that so based off of instructions and common sense it would probably be a good idea to cut a test cut to make sure my settings are alright, and that the teeth catch one another. The template that I picked though only came in three pieces so when I needed to do a test cut to see if they worked I still had to cut two thirds of the boards, which is what it is.</p>
         <img src="Images/Week2/IMG-1776.png" alt="Test cut box being cut" style="width:500px;height:500px;">
         <p></p>
