--- a/About_Me.htm
+++ b/About_Me.htm
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-red.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -59,9 +59,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
-      <h1 class="w3-text-red">About Me!</h1>
+      <h1 class="w3-text-blue">About Me!</h1>
       <p>Who am I? That's a great question and always a fun one to answer. I feel we'll start off with the basics. My name is John Proctor I was born in raised in Massachusetts, and I am a student at Wheaton College, in Norton. Here at Wheaton I am a physics major, however I am thinking that by the end of the semester I'll be a chemistry major as well. You may also want to know why I'm taking this course, which is another very good question. I'm taking it because it is the a great opportunity to learn about fabrication which is something that I never had the opprotunity to do before.</p><p>Before this class started I thought the only way you could learn how to use the laser cutter or 3D printers here would be to just go in, at hours that didn't really work for me, and pester one of the folks who worked there. Which is something I have a really hard time doing even if it is for something that I am really interested in. Even then it seemed like if I were to go through with that big first step, the folks were mostly just there to train you so that you didn't break anything (which is fair). Not so much to walk you through the process to allow you to be confident or knowledgable enough to do anything neat. Which means that to get to that stage it would take a  large amount of initiative to start, and whenever I did I was concerned with how far reaching all of the topics were so I didn't even know where to start.</p><p>So in short I felt like this course would be perfect for me, it seems like it's goal is to get your feet wet in the world of fabrication, while making sure you don't drown in the complexities, and for that I'm excited!</p>
-        <h2 class="w3-text-red">Mid Semester Thoughts</h2>
+        <h2 class="w3-text-blue">Mid Semester Thoughts</h2>
         <p>So we are half way through the semester yay! I feel the class has gone really well all things considered. I've had several problems throughout the semester, but most of those were my own problems. I feel we've learned a lot of interesting things and we've got lots more things to learn going forward so that's good.</p>
     </div>
 
