--- a/Assignment_Five.htm
+++ b/Assignment_Five.htm
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-red.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
@@ -60,7 +60,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
   <div class="w3-row w3-padding-64">
     <div class="w3-twothird w3-container">
 
-      <h1 class="w3-text-red">Project 5</h1>
+      <h1 class="w3-text-blue">Project 5</h1>
         <p>Working on this project was a little bit more difficult then I initially thought. I knew it was going to be a little hard since I had to use my nogin. However the idea of coming up with something to make was really tricky for me. Like I obvoisly could've gone with like a chair, or little table. In retrospect those both may have been better ideas because I intend to spend a good deal of words trying to convince you that my idea is in fact a good artistic idea that hold loads of merit.</p>
         <img src="Images/Week5/IMG-1812.JPG" alt="One arm" style="width:250px;height:250px;">
         <img src="Images/Week5/IMG-1813.JPG" alt="One arm" style="width:250px;height:250px;">
@@ -75,13 +75,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif;}
 
 
         <p> When it came to being creative I naturally began to have problems. I thought orginally that I might make some like wooden gear thing which now that I'm writing that I may do a quick version of that an toss it at the end of this. However I came up with something that is a much more interesting and exciting idea. A ramp!</p>
-        <h2 class="w3-text-red">A Ramp!</h2>
+        <h2 class="w3-text-blue">A Ramp!</h2>
        <img src="Images/Week5/IMG-1825.JPG" alt="One arm" style="width:500px;height:500px;">
 
         <p>Now you as a reasonable person, who is obviously excited by ramps, may not even need an explanation because you just get it. However I understand if you don't view ramps as the supior way to gain elevation, and therefor something to be celebrated at all times, then I will go into more detail.</p>
         <p>So why a ramp? Well, I have this little cousin he is very small, and very good, his name is Julian. Now on every Wednesday, Julian comes over to my house to play, and give his parents a break for a day. When he comes over one of his favorite things to do is play with his toy cars. Now sure he likes to roll his cars around on flat groud, as we all do, he is even more fond of rolling things down ramps. The way we've figured out to give him this experience is to place a piece of wood on our back step, and he sits at the top and rolls things down. </p>
         <p>There are some logistical problems to our current situation. Three problems mainly that I hope to solve. For one, since our ramp is on the back set of stairs, Julian has to be in a mildly precarious situation to roll his cars. Just to ease any concerns you may have, I mean precious in the way any toddler being elevated is precarious. The other problem is the stability of the board that we are using. Since the board isn't actually planted anywhere it is just lying on the steps kinda wedged into the ground. This means it is a really unstable platform to work on. The third in final problem is just that since the current system is just a flat piece of wood there is nothing stopping the car from falling off of the edge of the board anticlimatically instead of rolling with speed across out back porch. So like anyone who pretends to be like an engineer I saw these problems, and I'm going to fail to solve them with my ramp.</p>
-        <h2 class="w3-text-red">Making a Ramp!</h2>
+        <h2 class="w3-text-blue">Making a Ramp!</h2>
         <p>Ok so there is one option here that is to try to convince you that really a flat piece of wood with some grooves in it is a good and reasonable idea to give you. However I am going to choose not to do that because I think you would try to kill me and you might very well succeed. So instead I'm going to have add legs to the ramp which is a trickier thing to do. It also makes it so we can do the pocket technique that was taught to us during lessons. Woah applying Knowledge, learning!</p>
         <p>Ok so because I only had fusion 360 on machine I roughed it all up in that. The first thing I did was to just make a rectangle the size of the wood that we are given. Then I extruded that so we would have a piece of material with demensions of our board.</p>
        <img src="Images/Week5/Screen%20Shot%202020-10-20%20at%203.27.21%20PM.png" alt="One arm" style="width:250px;height:250px;">
